# ai-ppt-generator

./: .env.example  .gitignore  AI_Presentation_Platform.md  ARCHITECTURE.md  ENHANCEMENT_ROADMAP.md  PHASE_INTEGRATION_ANALYSIS.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  test_results.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_baseline.py  (+4 more)
backend/app/: __init__.py  main.py
backend/tests/: _test_artisan_validation_quick.py  test_advanced_integration.py  test_auth.py  test_background_jobs.py  test_batch_processing_validation.py  test_caching_layer.py  test_chart_diversity.py  test_chart_diversity_integration.py  test_classic_blue_color.py  test_conflict_resolution.py  test_contract_tests.py  test_cost_tracking.py  test_coverage_validation.py  test_data_enrichment_agent.py  test_data_enrichment_llm.py  test_export_templates_admin_api.py  test_hexaware_logo_usage.py  test_industry_classifier.py  test_integration.py  test_layout_engine.py  test_layout_engine_llm.py  test_layout_overflow_fixes.py  test_layout_validation_agent.py  test_llm_provider.py  test_minimal_navy_blue_usage.py  test_observability.py  test_phase5_optimizations.py  test_pipeline_orchestrator.py  test_pptx_export.py  test_presentations_api.py  test_pretty_printer.py  test_problematic_slide_detection.py  test_prompt_engineering_agent.py  test_property_based.py  test_provider_health.py  test_quality_scoring_agent.py  test_quality_scoring_llm.py  test_rate_limiting_security.py  test_research_agent.py  test_schema_versioning.py  (+9 more)
(+160 files in other folders)
